syntax = "proto3";

package go.micro.srv.PostMutilImage;

service Example {
	rpc PostMutilImage(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Avatar {
	// 二进制图片流
	bytes Avatar = 1;
	// 文件大小
	int64 Filesize = 2;
	// 文件后缀
	string FileExt = 3;
}

message Request {
	string Errno = 1;
	string Errmsg = 2;
	repeated Avatar Images = 3;
}

message Response {
	string msg = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
